Update for Swift 2.1 and Xcode 7

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -4,6 +4,6 @@ use_frameworks!
 target 'MeshbluBeaconKit_Tests', :exclusive => true do
   pod "MeshbluBeaconKit", :path => "../"
 
-  pod 'Quick'
-  pod 'Nimble'
+  pod 'Quick', '~> 0.6.0'
+  pod 'Nimble', '2.0.0-rc.3'
 end
